force-app/main/default/objects/mkto_si__Best_Bets_View_Detail__c/mkto_si__Best_Bets_View_Detail__c.object-meta.xml
<CustomObject>
    <label>Best Bets View Detail</label>
    <nameField>
        <label>Bets Bets View Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Best Bets View Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>