force-app/main/default/objects/mkto_si__Best_Bets_View_Detail__c/fields/mkto_si__FieldName__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__FieldName__c</fullName>
    <label>Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>