force-app/main/default/objects/mkto_si__Best_Bets_View_Detail__c/fields/mkto_si__LookupValue__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__LookupValue__c</fullName>
    <label>Lookup Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>